@@ -1,3 +1,4 @@
+.cache
 hints.txt
 tmp/
 git.diff
